<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <Button
        android:id="@+id/faceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/facebook_ile_giris_yap"
        app:backgroundTint="@color/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="159dp" />

    <Button
        android:id="@+id/varBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hesabim_var"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/faceBtn"
        tools:layout_editor_absoluteX="147dp" />

    <Button
        android:id="@+id/newBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hesap_olustur"
        app:backgroundTint="#FD0303"
        app:layout_constraintBottom_toTopOf="@+id/varBtn"
        tools:layout_editor_absoluteX="161dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/homeicon" />


</androidx.constraintlayout.widget.ConstraintLayout>