<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity"
    android:background="@color/white">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profil"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp">
            </ImageView>
            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baba"
                android:textColor="@color/black2"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_below="@+id/profile"
                android:layout_marginTop="10dp"></TextView>


    <LinearLayout
                android:id="@+id/lyt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/nameTxt"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/profil"
                    android:layout_below="@+id/nameTxt"
                    android:layout_marginLeft="75dp"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_detaylar"
                    android:textColor="@color/black2"
                    android:textSize="20dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="5dp">
                    </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyt1"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/fav"
            android:layout_marginLeft="75dp"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorilerim"
            android:textColor="@color/black2"
            android:textSize="20dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@id/lyt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyt2"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ilan"
            android:layout_marginLeft="75dp"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yayindakilanlarim"
            android:textColor="@color/black2"
            android:textSize="20dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyt3"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ayarlar"
            android:layout_marginLeft="75dp"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayarlarim"
            android:textColor="@color/black2"
            android:textSize="20dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/cikis"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cikis"
            android:textColor="@color/black2"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"></TextView>
    </LinearLayout>

</RelativeLayout>